--- a/style.css
+++ b/style.css
@@ -50,8 +50,11 @@ h1 {
 
 .new-todo-container {
     display: flex;
+    justify-content: flex-end;
     align-items: center;
+    gap: 1rem;
     margin: 1rem 0 0.5rem;
+    user-select: none;
 }
 
 .new-todo-container .add-todo-btn, .new-todo-container button {
@@ -62,15 +65,48 @@ h1 {
 }
 
 .new-todo-container .add-todo-btn {
+    margin-right: auto;
     background-color: var(--accent-color);
     border-radius: 0.44rem;
     padding: 0.75rem 1rem;
 }
+.new-todo-container .due-date {
+    position: relative;
+    background-color: var(--option-background-color);
+    border-radius: 0.625rem;
+    font: var(--btn-font);
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding-right: 1rem;
+}
+
+.due-date [type="date"] {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+}
+
+.due-date [type="date"]::-webkit-calendar-picker-indicator {
+    position: absolute;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+}
+
+.due-date label {
+    display: flex;
+    align-items: center;
+}
+
+.due-date .due-date-icon {
+    padding: 0.5rem 0.75rem;
+}
 
 .new-todo-container .dropdown {
-    margin-left: auto;
     position: relative;
-    user-select: none;
 }
 
 .dropdown button {
